// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Baseline Snapshot Tests - Regression matches Buyer Dashboard snapshot 1`] = `
[
  <MockScreen
    options={
      {
        "headerShown": false,
      }
    }
  />,
  <View
    style={
      {
        "backgroundColor": "#f5f8fa",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1a4b84",
          "borderBottomColor": "#81c784",
          "borderBottomWidth": 3,
          "elevation": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 12,
          "zIndex": 1000,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "alignItems": "center",
            "gap": 24,
            "paddingRight": 16,
          }
        }
        horizontal={true}
        showsHorizontalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 4,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 20,
                  "fontWeight": "600",
                }
              }
            >
              nav_buyer.dashboard
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 4,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 20,
                  "fontWeight": "600",
                }
              }
            >
              nav_buyer.browse_crops
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 4,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 20,
                  "fontWeight": "600",
                }
              }
            >
              nav_buyer.live_auctions
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 4,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 20,
                  "fontWeight": "600",
                }
              }
            >
              nav_buyer.my_bids
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 4,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 20,
                  "fontWeight": "600",
                }
              }
            >
              nav_buyer.market_insights
            </Text>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": 8,
            "position": "relative",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Ionicons
            color="#bbf7d0"
            name="person-circle-outline"
            size={32}
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      style={
        {
          "flex": 1,
          "padding": 16,
        }
      }
    >
      <View>
        <Text
          style={
            {
              "color": "#1a4b84",
              "fontSize": 24,
              "fontWeight": "bold",
              "marginBottom": 20,
            }
          }
        >
          buyer.dashboard_title
        </Text>
        <View
          style={
            {
              "backgroundColor": "#fff",
              "borderLeftColor": "#1a4b84",
              "borderLeftWidth": 5,
              "borderRadius": 12,
              "elevation": 3,
              "padding": 20,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            buyer.welcome_msg
          </Text>
          <Text
            style={
              {
                "color": "#666",
                "fontSize": 14,
                "marginTop": 8,
              }
            }
          >
            buyer.welcome_sub
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`Baseline Snapshot Tests - Regression matches Farmer Dashboard snapshot 1`] = `
[
  <MockScreen
    options={
      {
        "headerShown": false,
      }
    }
  />,
  <View
    style={
      {
        "backgroundColor": "#f5f8fa",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1a4b84",
          "borderBottomColor": "#81c784",
          "borderBottomWidth": 3,
          "elevation": 10,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 12,
          "zIndex": 1000,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 24,
            "paddingRight": 12,
          }
        }
        horizontal={true}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              nav_farmer.dashboard
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              nav_farmer.my_listings
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              nav_farmer.add_crop
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              nav_farmer.mandi_prices
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              nav_farmer.ai_insights
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fdf5e6",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              nav_farmer.live_auctions
            </Text>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginLeft": 8,
            "position": "relative",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 25,
              "opacity": 1,
            }
          }
        >
          <Bell
            color="#ffffff"
            size={26}
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "red",
                "borderRadius": 10,
                "minWidth": 16,
                "paddingHorizontal": 5,
                "position": "absolute",
                "right": -6,
                "top": -4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fff",
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
            >
              2
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Ionicons
            color="#bbf7d0"
            name="person-circle-outline"
            size={34}
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "padding": 16,
          "paddingBottom": 32,
        }
      }
      style={
        {
          "flex": 1,
        }
      }
    >
      <View>
        <Text
          style={
            {
              "color": "#1a4b84",
              "fontSize": 24,
              "fontWeight": "bold",
              "marginBottom": 20,
            }
          }
        >
          farmer.dashboard_title
        </Text>
        <View
          style={
            {
              "backgroundColor": "#fff",
              "borderLeftColor": "#2e7d32",
              "borderLeftWidth": 5,
              "borderRadius": 12,
              "elevation": 3,
              "marginBottom": 24,
              "padding": 20,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            farmer.welcome_msg
          </Text>
          <Text
            style={
              {
                "color": "#666",
                "fontSize": 14,
                "marginTop": 8,
              }
            }
          >
            farmer.welcome_sub
          </Text>
        </View>
        <View
          style={
            {
              "gap": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderLeftColor": "#2e7d32",
                "borderLeftWidth": 5,
                "borderRadius": 14,
                "elevation": 3,
                "opacity": 1,
                "padding": 20,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 4,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#1a4b84",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              farmer.add_crop
            </Text>
            <Text
              style={
                {
                  "color": "#666",
                  "fontSize": 14,
                  "marginTop": 6,
                }
              }
            >
              farmer.add_crop_sub
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderLeftColor": "#2e7d32",
                "borderLeftWidth": 5,
                "borderRadius": 14,
                "elevation": 3,
                "opacity": 1,
                "padding": 20,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 4,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#1a4b84",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              farmer.my_listings
            </Text>
            <Text
              style={
                {
                  "color": "#666",
                  "fontSize": 14,
                  "marginTop": 6,
                }
              }
            >
              farmer.my_listings_sub
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderLeftColor": "#2e7d32",
                "borderLeftWidth": 5,
                "borderRadius": 14,
                "elevation": 3,
                "opacity": 1,
                "padding": 20,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 4,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#1a4b84",
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              farmer.mandi_prices
            </Text>
            <Text
              style={
                {
                  "color": "#666",
                  "fontSize": 14,
                  "marginTop": 6,
                }
              }
            >
              farmer.mandi_prices_sub
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`Baseline Snapshot Tests - Regression matches Login screen snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source=""
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": undefined,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        {
          "backgroundColor": "rgba(255,248,235,0.55)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "maxWidth": 380,
          "paddingHorizontal": 24,
          "paddingTop": 32,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
          }
        }
      >
        <Image
          resizeMode="contain"
          source=""
          style={
            {
              "height": 70,
              "marginBottom": 64,
              "width": 70,
            }
          }
        />
        <Text
          style={
            {
              "fontFamily": "Times New Roman",
              "fontSize": 32,
              "textAlign": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "green",
              }
            }
          >
            KISSAAN
          </Text>
           
          <Text
            style={
              {
                "color": "rgb(37,95,153)",
              }
            }
          >
            SAATHI
          </Text>
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": 24,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "green",
              "fontSize": 20,
              "marginBottom": 48,
              "textAlign": "center",
            }
          }
        >
          auth.welcome
        </Text>
        <Text
          style={
            {
              "fontSize": 14,
              "marginBottom": 8,
            }
          }
        >
          auth.enter_phone
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#ccc",
              "borderRadius": 30,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 42,
              "paddingHorizontal": 14,
              "paddingVertical": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginRight": 10,
              }
            }
          >
            +91
          </Text>
          <TextInput
            keyboardType="number-pad"
            maxLength={10}
            onChangeText={[Function]}
            placeholder="auth.phone_placeholder"
            placeholderTextColor="#777"
            style={
              {
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 4,
              }
            }
            value=""
          />
        </View>
        <Text
          style={
            {
              "color": "#555",
              "fontSize": 12,
              "marginBottom": 14,
              "marginTop": 10,
            }
          }
        >
          auth.otp_hint
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgb(37,95,153)",
              "borderRadius": 999,
              "elevation": 4,
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 16,
              }
            }
          >
            auth.continue
          </Text>
        </View>
        <Text
          style={
            {
              "fontSize": 14,
              "marginTop": 16,
              "textAlign": "center",
            }
          }
        >
          auth.no_account
           
          <Text
            style={
              {
                "color": "green",
                "textDecorationLine": "underline",
              }
            }
          >
            auth.create_new
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text>
            Go to Farmer Dashboard
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
